added show-item page

--- a/vagrant/catalog/templates/show-all-categories-items.html
+++ b/vagrant/catalog/templates/show-all-categories-items.html
@@ -65,6 +65,8 @@
 		
 		<!-- sections (categories and items) -->
 		<div class="section__wrapper">
+		
+		  <!-- categories section -->
 		  <section class="categories">
 		    <header>
               <h2 class="section__title">Categories</h2>
