--- a/vagrant/catalog/templates/show-all-categories-items.html
+++ b/vagrant/catalog/templates/show-all-categories-items.html
@@ -67,7 +67,7 @@
 		<div class="section__wrapper">
 		
 		  <!-- categories section -->
-		  <section class="categories">
+		  <section class="categories" style="order:1">
 		    <header>
               <h2 class="section__title">Categories</h2>
             </header>
@@ -83,7 +83,7 @@
 		    <div class="add__category"><a href = '{{url_for('addNewCategory')}}'>Add New Category</a></div>
 		  </section> <!-- end of categories section -->
 		  
-		  <section class="items">
+		  <section class="items" style="order:2">
 		    <header>
               <h2 class="section__title">Items</h2>
             </header>
