--- a/vagrant/catalog/templates/new-category.html
+++ b/vagrant/catalog/templates/new-category.html
@@ -20,7 +20,7 @@
 </form>
 </div>
 </br></br>
-<a href='{{url_for('ShowCategories')}}'>Back to Catalog Categories</a>
+<a href='{{url_for('ShowAllCategoriesItems')}}'>Back to Catalog Categories</a>
 </br></br>
 </body>
 
