--- a/vagrant/catalog/templates/delete-item.html
+++ b/vagrant/catalog/templates/delete-item.html
@@ -12,7 +12,7 @@
 
         </form>
 
-        <a href = '{{url_for('ShowCategories')}}'> Cancel </a>
+        <a href = '{{url_for('ShowAllCategoriesItems')}}'> Cancel </a>
 
     </body>
 </html>
