--- a/vagrant/catalog/templates/edit-category.html
+++ b/vagrant/catalog/templates/edit-category.html
@@ -17,7 +17,7 @@
 
 <input type='submit' value='Edit'>
 
-<a href = '{{url_for('ShowCategories')}}'> Cancel </a>
+<a href = '{{url_for('ShowAllCategoriesItems')}}'> Cancel </a>
 </form>
 </body>
 </html>
