--- a/vagrant/catalog/templates/edit-item.html
+++ b/vagrant/catalog/templates/edit-item.html
@@ -31,7 +31,7 @@
 
 <input type='submit' value='Edit'>
 
-<a href = '{{url_for('ShowCategories')}}'> Cancel </a>
+<a href = '{{url_for('ShowAllCategoriesItems')}}'> Cancel </a>
 </form>
 </body>
 </html>
