--- a/vagrant/catalog/templates/new-item.html
+++ b/vagrant/catalog/templates/new-item.html
@@ -90,21 +90,22 @@
 			<hr>
 		    
 		    <div class="item__wrapper">
+			  <!-- form -->
 			  <form action="{{ url_for('addNewItem', categories = categories)}}" method = 'POST'>
 				<ul class="form__style">
-				  <li><label for="name">Name</label>
+				  <li><label for="name">Name<span class="required">*</span></label>
 				    <input type ='text' name='name' class="field__long">
 				  </li>
 				  <li>
-				    <label for="description">Description</label>
+				    <label for="description">Description<span class="required">*</span></label>
 				    <textarea name = 'description' class="field__long field__textarea" rows='5'></textarea>
 				  </li>
 				  <li>
-				    <label for="price">Price</label>
+				    <label for="price">Price<span class="required">*</span></label>
 				    <input type = 'text' name='price' size='8'>
 				  </li>
 				  <li>
-				    <label for="category">Category</label>
+				    <label for="category">Category<span class="required">*</span></label>
 				    <select name = 'category_id' class="field__select">
 					{% for i in categories %}
 						<option value = '{{i.id}}'>{{i.name}}</option>
