edit item complete
also removed bullet point leading flash message and added function for cancel edit item to show a flash message on cancel.

--- a/vagrant/catalog/static/style3.css
+++ b/vagrant/catalog/static/style3.css
@@ -155,12 +155,16 @@ header {
 	justify-content: center; /* main axis - vertical*/
 	width: 100%;
 	background: #355575;
-	padding: 0 5px 0 5px; /* top right bottom left */
+	padding: 0 15px 0 5px; /* top right bottom left */
 }
 
 .flash__message {
 	font-size: 1.8em;
 	color: #ffffff;
+}
+
+ul {
+	list-style: none; /* remove the bullet point leading lists */
 }
 
 /* sections */
