added cancel new category flash message

--- a/vagrant/catalog/templates/new-category.html
+++ b/vagrant/catalog/templates/new-category.html
@@ -97,7 +97,7 @@
 				    <input type ='text' name='name' class="field__long">
 				  </li>
 				    <input type='submit' value='Add'>
-				    <a href='{{url_for('ShowAllCategoriesItems')}}' class="button">Cancel</a>
+				    <a href='{{url_for('ShowAllCategoriesAfterCancelNew')}}' class="button">Cancel</a>
 				  </li>
 				</ul>
 			  </form> <!-- end of form -->
