--- a/vagrant/catalog/templates/new-item.html
+++ b/vagrant/catalog/templates/new-item.html
@@ -114,7 +114,7 @@
 				  </li>
 			      <li>
 				    <input type='submit' value='Add'>
-				    <a href='{{url_for('ShowAllCategoriesItems')}}' class="button">Cancel</a>
+				    <a href='{{url_for('ShowCategoriesAfterCancelNewItem')}}' class="button">Cancel</a>
 				  </li>
 				</ul>
 			  </form> <!-- end of form -->
