--- a/vagrant/catalog/templates/index.html
+++ b/vagrant/catalog/templates/index.html
@@ -25,15 +25,14 @@
 
       <header>
         <div class="header__left__wrapper">
-		  <img class="header__logo" src="../static/images/winking_emoji_540x540.jpg" alt="winking emoji">
+		  <img class="header__logo" src="../static/winking_emoji_540x540.jpg" alt="winking emoji">
 		  <div class="header__text__wrapper">
-            <h1 class="header__name">TLS.com</h1>
             <h3 class="header__title">Totally Legit Store</h3>
           </div> <!-- end of header__text__wrapper -->
 		</div> <!-- end of header__brand__wrapper -->
 		
 		<div class="header__login__wrapper">
-		  <img class="header__login" src="../static/images/login.png" alt="Login">
+		  <img class="header__login" src="../static/login.png" alt="Login">
 		</div> <!-- end of header__login__wrapper -->
       </header>
 
@@ -43,7 +42,7 @@
 
         <!-- Hero Image -->
         <div class="hero__image__wrapper">
-          <img class="hero__image" src="../static/images/closed.jpg" alt="closed">
+          <img class="hero__image" src="../static/closed.jpg" alt="closed">
           <!-- white text over hero image: site description -->
           <h2 class="hero__text">Catalog Project</h2>
         </div> <!-- end of hero__image__wrapper -->
@@ -68,7 +67,7 @@
               <h2 class="section__title">Items</h2>
             </header>
 			<hr>
-		    <div class="add__item">Add New Item</div>
+		    <div class="section__items__link">Add New Item</div>
 		  
 		    <div class="item__wrapper">
 		      <h3 class="item__name">Coffee Maker</h3>
