--- a/vagrant/catalog/templates/index.html
+++ b/vagrant/catalog/templates/index.html
@@ -32,7 +32,7 @@
 		</div> <!-- end of header__brand__wrapper -->
 		
 		<div class="header__login__wrapper">
-		  <img class="header__login" src="../static/login.png" alt="Login">
+		  <a href='{{url_for('Login')}}' class = "header__login__button">Login</a>
 		</div> <!-- end of header__login__wrapper -->
       </header>
 
