--- a/vagrant/catalog/templates/login.html
+++ b/vagrant/catalog/templates/login.html
@@ -14,8 +14,6 @@
       <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style3.css') }}">
       <!-- google font Bungiee Inline -->
       <link href="https://fonts.googleapis.com/css?family=Bowlby+One+SC|Metrophobic" rel="stylesheet">
-      <!-- for font awesome icons -->
-      <script src="https://use.fontawesome.com/1ff14c05b8.js"></script>
 
   </head>
 
@@ -94,28 +92,7 @@
 		</div> <!-- end of section__wrapper -->
 		
         <footer>
-          <h4>Follow Glen Bland on social media</h4>
-          <!-- font awesome social media icons -->
-          <!-- google+ icon -->
-          <a href="https://plus.google.com/u/0/+GlenBland" target="_blank" rel="noopener noreferrer">
-            <i class="fa fa-google-plus-square" aria-hidden="true"></i>
-          </a>
-          <!-- facebook icon -->
-          <a href="https://www.facebook.com/glenbland81" target="_blank" rel="noopener noreferrer">
-            <i class="fa fa-facebook-square" aria-hidden="true"></i>
-          </a>
-          <!-- twitter icon -->
-          <a href="https://twitter.com/Glen_All_In" target="_blank" rel="noopener noreferrer">
-            <i class="fa fa-twitter-square" aria-hidden="true"></i>
-          </a>
-          <!-- linkedin icon -->
-          <a href="https://www.linkedin.com/in/glenbland/" target="_blank" rel="noopener noreferrer">
-            <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-          </a>
-          <!-- youtube icon -->
-          <a href="https://www.youtube.com/channel/UCd3jvhDY6dXdn3ifT5tQYmQ?view_as=subscriber" target="_blank" rel="noopener noreferrer">
-            <i class="fa fa-youtube-square" aria-hidden="true"></i>
-          </a>
+          <h4>Created by Glen Bland 2018</h4>
         </footer>
 
       </main>
