--- a/vagrant/catalog/templates/login.html
+++ b/vagrant/catalog/templates/login.html
@@ -15,6 +15,11 @@
       <!-- google font Bungiee Inline -->
       <link href="https://fonts.googleapis.com/css?family=Bowlby+One+SC|Metrophobic" rel="stylesheet">
 
+	  <!--LOAD PRE-REQUISITES FOR GOOGLE SIGN IN -->
+	  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+	  <script src="//apis.google.com/js/platform.js?onload=start"> </script>
+	  <!-- END PRE-REQUISITES FOR GOOGLE SIGN IN -->
+
   </head>
 
   <body>
@@ -30,7 +35,7 @@
 		</div> <!-- end of header__brand__wrapper -->
 		
 		<div class="header__login__wrapper">
-		  <a href='{{url_for('Login')}}' class = "header__login__button">Login</a>
+		  <a href='{{url_for('showLogin')}}' class = "header__login__button">Login</a>
 		</div> <!-- end of header__login__wrapper -->
       </header>
 
@@ -85,9 +90,59 @@
 		    <header>
               <h2 class="section__title">Login</h2>
             </header>
-			<hr>
-		    
+			<hr></br>
+		    <!-- GOOGLE PLUS SIGN IN BUTTON-->
+			  <div id="signinButton">
+			    <span class="g-signin"
+                data-scope="openid email"
+                data-clientid="595888207696-saiiv3l4m0obuhj79al9liojp2r5eea9.apps.googleusercontent.com"
+                data-redirecturi="postmessage"
+                data-accesstype="offline"
+                data-cookiepolicy="single_host_origin"
+                data-callback="signInCallback"
+                data-approvalprompt="force">
+                </span> <!-- end g-signin span -->
+			  </div> <!-- end singinButton div -->
+			  <!--END GOOGLE PLUS SIGN IN BUTTON -->
 			
+			<div id="result"></div>
+			
+			<!-- GOOGLE SIGN IN SCRIPT -->
+			<script>
+			  function signInCallback(authResult) {
+				if (authResult['code']) {
+				
+				  // Hide the sign-in button now that the user is authorized
+				  $('#signinButton').attr('style', 'display: none');
+				  
+				  // Send the one-time-use code to the server, if the server responds, 
+				  // write a 'login successful' message to the web page and then redirect 
+				  // back to the main restaurants page.
+				  $.ajax({
+					type: 'POST',
+					url: '/gconnect?state={{STATE}}',
+					processData: false,
+					data: authResult['code'],
+					contentType: 'application/octet-stream; charset=utf-8',
+					success: function(result) {
+					  // Handle or verify the server response if necessary.
+					  if (result) {
+						$('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
+						setTimeout(function() {
+						  window.location.href = "/catalog";
+						}, 4000);
+          
+					  } else if (authResult['error']) {
+					    console.log('There was an error: ' + authResult['error']);
+					  } else {
+					    $('#result').html('Failed to make a server-side call. Check your configuration and console.');
+					  }
+				    }
+				  });
+			    }
+			  }
+			</script> <!-- END OF GOOGLE SIGN IN SCRIPT -->
+
 		  </section> <!-- end of items section -->
 		</div> <!-- end of section__wrapper -->
 		
