--- a/vagrant/catalog/templates/show-item.html
+++ b/vagrant/catalog/templates/show-item.html
@@ -30,7 +30,7 @@
 		</div> <!-- end of header__brand__wrapper -->
 		
 		<div class="header__login__wrapper">
-		  <a href='{{url_for('Login')}}' class = "header__login__button">Login</a>
+		  <a href='{{url_for('showLogin')}}' class = "header__login__button">Login</a>
 		</div> <!-- end of header__login__wrapper -->
       </header>
 
