--- a/vagrant/catalog/templates/index.html
+++ b/vagrant/catalog/templates/index.html
@@ -31,6 +31,7 @@
 		
 		<div class="header__login__wrapper">
 		  <a href='{{url_for('Login')}}' class = "header__login__button">Login</a>
+		  <img class="header__user__pic" src="../static/generic_user_1.png" alt="generic user pic">
 		</div> <!-- end of header__login__wrapper -->
       </header>
 
