--- a/vagrant/catalog/templates/show-all-categories-items.html
+++ b/vagrant/catalog/templates/show-all-categories-items.html
@@ -35,6 +35,7 @@
 		  {% else: %}
 		    <a href='{{url_for('gdisconnect')}}' class = "header__login__button">Logout</a>
 		  {% endif %}
+		  <img class="header__user__pic" src="{{ url_for('static', filename='generic_user_1.png') }}" alt="generic user pic">
 		</div> <!-- end of header__login__wrapper -->
       </header>
 
