--- a/vagrant/catalog/templates/delete-item.html
+++ b/vagrant/catalog/templates/delete-item.html
@@ -30,7 +30,13 @@
 		</div> <!-- end of header__brand__wrapper -->
 		
 		<div class="header__login__wrapper">
-		  <a href='{{url_for('showLogin')}}' class = "header__login__button">Login</a>
+		  {% if loggedIn != "True": %}
+		    <a href='{{url_for('showLogin')}}' class = "header__login__button">Login</a>
+			<img class="header__user__pic" src="{{ url_for('static', filename='generic_user_1.png') }}" alt="generic user pic">
+		  {% else: %}
+		    <a href='{{url_for('gdisconnect')}}' class = "header__login__button">Logout</a>
+			<img class="header__user__pic" src="{{ login_session['picture'] }}" alt="user pic">
+		  {% endif %}
 		</div> <!-- end of header__login__wrapper -->
       </header>
 
