hide elements when logged out
hide all add, edit, and delete links when not logged in.

--- a/vagrant/catalog/templates/index.html
+++ b/vagrant/catalog/templates/index.html
@@ -53,7 +53,7 @@
               <h2 class="section__title">Categories</h2>
             </header>
 		    <hr>
-		    <div class="category"><h3>Electronics</h3><div class="category__edit__delete"> Edit | Delete</div></div>
+		    <div class="category"><h3>Electronics</h3><div class="category__edit__delete" style='display:none'> Edit | Delete</div></div>
 		    <div class="category"><h3>Kitchen</h3><div class="category__edit__delete"> Edit | Delete</div></div>
 		    <div class="category"><h3>Automotive</h3><div class="category__edit__delete"> Edit | Delete</div></div>
 		    <div class="category"><h3>Garden</h3><div class="category__edit__delete"> Edit | Delete</div></div>
