--- a/vagrant/catalog/templates/show-all-categories-items.html
+++ b/vagrant/catalog/templates/show-all-categories-items.html
@@ -37,7 +37,6 @@
 		    <a href='{{url_for('gdisconnect')}}' class = "header__login__button">Logout</a>
 			<img class="header__user__pic" src="{{ login_session['picture'] }}" alt="user pic">
 		  {% endif %}
-		  
 		</div> <!-- end of header__login__wrapper -->
       </header>
 
@@ -78,13 +77,13 @@
 		    <hr>
 			{% for i in categories %}
 		    <div class="category"><h3><a href='{{url_for('ShowItemsInCategory', category_id = i.id)}}' >{{i.name}}</a></h3>
-			  <div class="category__edit__delete">
+			  <div class="category__edit__delete" {% if loggedIn != "True": %}style='display:none'{% endif %}>
 			    <a href='{{url_for('editCategory', category_id = i.id)}}' >Edit</a> | 
 	            <a href='{{url_for('deleteCategory', category_id = i.id)}}' >Delete</a>
 			  </div>
 			</div>
 		    {% endfor %}
-		    <div class="add__category"><a href = '{{url_for('addNewCategory')}}'>Add New Category</a></div>
+		    <div class="add__category" {% if loggedIn != "True": %}style='display:none'{% endif %}><a href = '{{url_for('addNewCategory')}}'>Add New Category</a></div>
 		  </section> <!-- end of categories section -->
 		  
 		  <!-- Items section -->
@@ -93,7 +92,7 @@
               <h2 class="section__title">Items</h2>
             </header>
 			<hr>
-		    <div class="section__items__link"><a href = '{{url_for('addNewItem')}}'>Add New Item</a></div>
+		    <div class="section__items__link" {% if loggedIn != "True": %}style='display:none'{% endif %}><a href = '{{url_for('addNewItem')}}'>Add New Item</a></div>
 		    
 			{% for i in items %}
 						
@@ -102,7 +101,7 @@
 			  <div class="item__description">{{i.description}}</div>
 			  <div class="item__price">{{i.price}}</div>
 			  <div class="item__category">{{GetCategoryNameFromID(i.category_id)}}</div>
-			  <div class="item__edit__delete">
+			  <div class="item__edit__delete" {% if loggedIn != "True": %}style='display:none'{% endif %}>
 			    <a href='{{url_for('editItem', catalog_item_id = i.id)}}'>Edit</a> |  
 				<a href='{{url_for('deleteItem', catalog_item_id = i.id)}}'>Delete</a>
 			  </div> <!-- end of item__edit__delete -->
