added favicon to all pages

--- a/vagrant/catalog/templates/show-all-categories-items.html
+++ b/vagrant/catalog/templates/show-all-categories-items.html
@@ -3,6 +3,9 @@
 <html lang="en">
 
   <head>
+	  <link rel="icon" 
+      type="image/x-icon" 
+      href="{{ url_for('static', filename='favicon.ico') }}" />
 
       <title>Glen Bland Catalog Project</title>
       <meta name="description" content="Catalog Project for Udacity Full Stack Web Developer">
