--- a/vagrant/catalog/templates/edit-item.html
+++ b/vagrant/catalog/templates/edit-item.html
@@ -3,7 +3,10 @@
 <html lang="en">
 
   <head>
-
+	  <link rel="icon" 
+      type="image/x-icon" 
+      href="{{ url_for('static', filename='favicon.ico') }}" />
+	  
       <title>Glen Bland Catalog Project</title>
       <meta name="description" content="Catalog Project for Udacity Full Stack Web Developer">
       <meta name="keywords" content="Glen, Bland, Catalog, Udacity">
