store user picture on server working

--- a/vagrant/catalog/templates/show-item.html
+++ b/vagrant/catalog/templates/show-item.html
@@ -102,7 +102,7 @@
 			  </br>
 			  <div class="creater__name">Created By: {{user.name}}</div>
 			  <div class="creater__email">Email: {{user.email}}</div>
-			  <img class="creater__user__pic" src="{{ url_for('static', filename=user.picture) }}" alt="picture of user who created item listing">
+			  <img class="creater__user__pic" src="{{ url_for('static', filename=user_pic) }}" alt="picture of user who created item listing">
 			  <div class="item__edit__delete" {% if loggedIn != "True": %}style='display:none'{% endif %}>
 			    <a href='{{url_for('editItem', catalog_item_id = item.id)}}'>Edit</a> |  
 				<a href='{{url_for('deleteItem', catalog_item_id = item.id)}}'>Delete</a>
